@@ -41,20 +41,29 @@ import org.apache.nifi.components.ValidationContext;
 import org.apache.nifi.components.ValidationResult;
 import org.apache.nifi.context.PropertyContext;
 import org.apache.nifi.expression.ExpressionLanguageScope;
+import org.apache.nifi.migration.PropertyConfiguration;
 import org.apache.nifi.processor.ProcessContext;
 import org.apache.nifi.processor.ProcessSession;
 import org.apache.nifi.processor.ProcessSessionFactory;
 import org.apache.nifi.processor.Relationship;
 import org.apache.nifi.processor.exception.ProcessException;
 import org.apache.nifi.processor.util.StandardValidators;
+import org.apache.nifi.processors.aws.kinesis.property.OutputStrategy;
 import org.apache.nifi.processors.aws.kinesis.stream.record.AbstractKinesisRecordProcessor;
 import org.apache.nifi.processors.aws.kinesis.stream.record.KinesisRecordProcessorRaw;
 import org.apache.nifi.processors.aws.kinesis.stream.record.KinesisRecordProcessorRecord;
+import org.apache.nifi.processors.aws.kinesis.stream.record.converter.RecordConverter;
+import org.apache.nifi.processors.aws.kinesis.stream.record.converter.RecordConverterIdentity;
+import org.apache.nifi.processors.aws.kinesis.stream.record.converter.RecordConverterWrapper;
 import org.apache.nifi.processors.aws.v2.AbstractAwsAsyncProcessor;
 import org.apache.nifi.processors.aws.v2.AbstractAwsProcessor;
 import org.apache.nifi.serialization.RecordReaderFactory;
 import org.apache.nifi.serialization.RecordSetWriterFactory;
 import org.apache.nifi.serialization.record.RecordFieldType;
+import software.amazon.awssdk.awscore.client.builder.AwsClientBuilder;
+import software.amazon.awssdk.http.Protocol;
+import software.amazon.awssdk.http.nio.netty.Http2Configuration;
+import software.amazon.awssdk.http.nio.netty.NettyNioAsyncHttpClient;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.cloudwatch.CloudWatchAsyncClient;
 import software.amazon.awssdk.services.cloudwatch.CloudWatchAsyncClientBuilder;
@@ -82,6 +91,7 @@ import software.amazon.kinesis.retrieval.polling.PollingConfig;
 import java.lang.reflect.InvocationTargetException;
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.time.ZoneOffset;
@@ -101,7 +111,6 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.stream.Collectors;
 
 @InputRequirement(InputRequirement.Requirement.INPUT_FORBIDDEN)
 @TriggerSerially
@@ -145,6 +154,10 @@ import java.util.stream.Collectors;
 @SeeAlso(PutKinesisStream.class)
 public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsyncClient, KinesisAsyncClientBuilder> {
 
+    private static final int INITIAL_WINDOW_SIZE_BYTES = 512 * 1024; // 512 KB - suggested by KinesisClientUtil
+    private static final Duration HEALTH_CHECK_PING_PERIOD_MILLIS = Duration.ofMinutes(1); // suggested by KinesisClientUtil
+    private static final Protocol PROTOCOL = Protocol.HTTP2; // suggested by KinesisClientUtil
+
     private static final String CHECKPOINT_CONFIG = "checkpointConfig";
     private static final String COORDINATOR_CONFIG = "coordinatorConfig";
     private static final String LEASE_MANAGEMENT_CONFIG = "leaseManagementConfig";
@@ -169,31 +182,27 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     );
 
     static final PropertyDescriptor KINESIS_STREAM_NAME = new PropertyDescriptor.Builder()
-            .name("kinesis-stream-name")
-            .displayName("Amazon Kinesis Stream Name")
+            .name("Amazon Kinesis Stream Name")
             .description("The name of Kinesis Stream")
             .required(true)
             .addValidator(StandardValidators.NON_EMPTY_VALIDATOR)
             .build();
 
     public static final PropertyDescriptor APPLICATION_NAME = new PropertyDescriptor.Builder()
-            .displayName("Application Name")
-            .name("amazon-kinesis-stream-application-name")
+            .name("Application Name")
             .description("The Kinesis stream reader application name.")
             .addValidator(StandardValidators.NON_BLANK_VALIDATOR)
             .required(true).build();
 
     public static final PropertyDescriptor INITIAL_STREAM_POSITION = new PropertyDescriptor.Builder()
-            .displayName("Initial Stream Position")
-            .name("amazon-kinesis-stream-initial-position")
+            .name("Initial Stream Position")
             .description("Initial position to read Kinesis streams.")
             .allowableValues(LATEST, TRIM_HORIZON, AT_TIMESTAMP)
             .defaultValue(LATEST.getValue())
             .required(true).build();
 
     public static final PropertyDescriptor STREAM_POSITION_TIMESTAMP = new PropertyDescriptor.Builder()
-            .displayName("Stream Position Timestamp")
-            .name("amazon-kinesis-stream-position-timestamp")
+            .name("Stream Position Timestamp")
             .description("Timestamp position in stream from which to start reading Kinesis Records. " +
                     "Required if " + INITIAL_STREAM_POSITION.getDescription() + " is " + AT_TIMESTAMP.getDisplayName() + ". " +
                     "Uses the Timestamp Format to parse value into a Date.")
@@ -202,8 +211,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             .required(false).build();
 
     public static final PropertyDescriptor TIMESTAMP_FORMAT = new PropertyDescriptor.Builder()
-            .displayName("Timestamp Format")
-            .name("amazon-kinesis-stream-timestamp-format")
+            .name("Timestamp Format")
             .description("Format to use for parsing the " + STREAM_POSITION_TIMESTAMP.getDisplayName() + " into a Date " +
                     "and converting the Kinesis Record's Approximate Arrival Timestamp into a FlowFile attribute.")
             .addValidator((subject, input, context) -> {
@@ -223,56 +231,49 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             .required(true).build();
 
     public static final PropertyDescriptor FAILOVER_TIMEOUT = new PropertyDescriptor.Builder()
-            .displayName("Failover Timeout")
-            .name("amazon-kinesis-stream-failover-timeout")
+            .name("Failover Timeout")
             .description("Kinesis Client Library failover timeout")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("30 secs")
             .required(true).build();
 
     public static final PropertyDescriptor GRACEFUL_SHUTDOWN_TIMEOUT = new PropertyDescriptor.Builder()
-            .displayName("Graceful Shutdown Timeout")
-            .name("amazon-kinesis-stream-graceful-shutdown-timeout")
+            .name("Graceful Shutdown Timeout")
             .description("Kinesis Client Library graceful shutdown timeout")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("20 secs")
             .required(true).build();
 
     public static final PropertyDescriptor CHECKPOINT_INTERVAL = new PropertyDescriptor.Builder()
-            .displayName("Checkpoint Interval")
-            .name("amazon-kinesis-stream-checkpoint-interval")
+            .name("Checkpoint Interval")
             .description("Interval between Kinesis checkpoints")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("3 secs")
             .required(true).build();
 
     public static final PropertyDescriptor NUM_RETRIES = new PropertyDescriptor.Builder()
-            .displayName("Retry Count")
-            .name("amazon-kinesis-stream-retry-count")
+            .name("Retry Count")
             .description("Number of times to retry a Kinesis operation (process record, checkpoint, shutdown)")
             .addValidator(StandardValidators.INTEGER_VALIDATOR)
             .defaultValue("10")
             .required(true).build();
 
     public static final PropertyDescriptor RETRY_WAIT = new PropertyDescriptor.Builder()
-            .displayName("Retry Wait")
-            .name("amazon-kinesis-stream-retry-wait")
+            .name("Retry Wait")
             .description("Interval between Kinesis operation retries (process record, checkpoint, shutdown)")
             .addValidator(StandardValidators.TIME_PERIOD_VALIDATOR)
             .defaultValue("1 sec")
             .required(true).build();
 
     public static final PropertyDescriptor DYNAMODB_ENDPOINT_OVERRIDE = new PropertyDescriptor.Builder()
-            .displayName("DynamoDB Override")
-            .name("amazon-kinesis-stream-dynamodb-override")
+            .name("DynamoDB Override")
             .description("DynamoDB override to use non-AWS deployments")
             .addValidator(StandardValidators.URL_VALIDATOR)
             .expressionLanguageSupported(ExpressionLanguageScope.ENVIRONMENT)
             .required(false).build();
 
     public static final PropertyDescriptor REPORT_CLOUDWATCH_METRICS = new PropertyDescriptor.Builder()
-            .displayName("Report Metrics to CloudWatch")
-            .name("amazon-kinesis-stream-cloudwatch-flag")
+            .name("Report Metrics to CloudWatch")
             .description("Whether to report Kinesis usage metrics to CloudWatch.")
             .addValidator(StandardValidators.BOOLEAN_VALIDATOR)
             .allowableValues("true", "false")
@@ -280,8 +281,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             .required(true).build();
 
     public static final PropertyDescriptor RECORD_READER = new PropertyDescriptor.Builder()
-            .name("amazon-kinesis-stream-record-reader")
-            .displayName("Record Reader")
+            .name("Record Reader")
             .description("The Record Reader to use for reading received messages." +
                     " The Kinesis Stream name can be referred to by Expression Language '${" +
                     AbstractKinesisRecordProcessor.KINESIS_RECORD_SCHEMA_KEY + "}' to access a schema." +
@@ -292,8 +292,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             .build();
 
     public static final PropertyDescriptor RECORD_WRITER = new PropertyDescriptor.Builder()
-            .name("amazon-kinesis-stream-record-writer")
-            .displayName("Record Writer")
+            .name("Record Writer")
             .description("The Record Writer to use for serializing Records to an output FlowFile." +
                     " The Kinesis Stream name can be referred to by Expression Language '${" +
                     AbstractKinesisRecordProcessor.KINESIS_RECORD_SCHEMA_KEY + "}' to access a schema." +
@@ -306,6 +305,15 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     public static final PropertyDescriptor AWS_CREDENTIALS_PROVIDER_SERVICE = new PropertyDescriptor.Builder()
             .fromPropertyDescriptor(AbstractAwsProcessor.AWS_CREDENTIALS_PROVIDER_SERVICE)
             .required(true)
+            .build();
+
+    public static final PropertyDescriptor OUTPUT_STRATEGY = new PropertyDescriptor.Builder()
+            .name("Output Strategy")
+            .description("The format used to output the Kinesis Record into a FlowFile Record.")
+            .required(true)
+            .defaultValue(OutputStrategy.USE_VALUE)
+            .allowableValues(OutputStrategy.class)
+            .dependsOn(RECORD_WRITER)
             .build();
 
     public static final Relationship REL_PARSE_FAILURE = new Relationship.Builder()
@@ -321,6 +329,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             APPLICATION_NAME,
             RECORD_READER,
             RECORD_WRITER,
+            OUTPUT_STRATEGY,
             REGION,
             ENDPOINT_OVERRIDE,
             DYNAMODB_ENDPOINT_OVERRIDE,
@@ -345,7 +354,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
             "leaseManagementConfig.failoverTimeMillis", FAILOVER_TIMEOUT
     );
 
-    private static final Object WORKER_LOCK = new Object();
+    private final Object workerLock = new Object();
     private static final String SCHEDULER_THREAD_NAME_TEMPLATE = ConsumeKinesisStream.class.getSimpleName() + "-" + Scheduler.class.getSimpleName() + "-";
 
     private static final Set<Relationship> RELATIONSHIPS = Set.of(
@@ -403,6 +412,24 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
         } else if (RECORD_WRITER.equals(descriptor)) {
             isRecordWriterSet = StringUtils.isNotEmpty(newValue);
         }
+    }
+
+    @Override
+    public void migrateProperties(final PropertyConfiguration config) {
+        config.renameProperty("kinesis-stream-name", "Amazon Kinesis Stream Name");
+        config.renameProperty("amazon-kinesis-stream-application-name", "Application Name");
+        config.renameProperty("amazon-kinesis-stream-initial-position", "Initial Stream Position");
+        config.renameProperty("amazon-kinesis-stream-position-timestamp", "Stream Position Timestamp");
+        config.renameProperty("amazon-kinesis-stream-timestamp-format", "Timestamp Format");
+        config.renameProperty("amazon-kinesis-stream-failover-timeout", "Failover Timeout");
+        config.renameProperty("amazon-kinesis-stream-graceful-shutdown-timeout", "Graceful Shutdown Timeout");
+        config.renameProperty("amazon-kinesis-stream-checkpoint-interval", "Checkpoint Interval");
+        config.renameProperty("amazon-kinesis-stream-retry-count", "Retry Count");
+        config.renameProperty("amazon-kinesis-stream-retry-wait", "Retry Wait");
+        config.renameProperty("amazon-kinesis-stream-dynamodb-override", "DynamoDB Override");
+        config.renameProperty("amazon-kinesis-stream-cloudwatch-flag", "Report Metrics to CloudWatch");
+        config.renameProperty("amazon-kinesis-stream-record-reader", "Record Reader");
+        config.renameProperty("amazon-kinesis-stream-record-writer", "Record Writer");
     }
 
     @Override
@@ -564,7 +591,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     @Override
     public void onTrigger(final ProcessContext context, final ProcessSessionFactory sessionFactory) {
         if (scheduler == null) {
-            synchronized (WORKER_LOCK) {
+            synchronized (workerLock) {
                 if (scheduler == null) {
                     final String schedulerId = generateSchedulerId();
                     getLogger().info("Starting Kinesis Scheduler {}", schedulerId);
@@ -594,7 +621,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     @OnStopped
     public void stopConsuming(final ProcessContext context) {
         if (scheduler != null) {
-            synchronized (WORKER_LOCK) {
+            synchronized (workerLock) {
                 if (scheduler != null) {
                     // indicate whether the processor has been Stopped; the Worker can be marked as SHUT_DOWN but still be waiting
                     // for ShardConsumers/RecordProcessors to complete, etc.
@@ -631,8 +658,7 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
                 .keySet()
                 .stream()
                 .filter(PropertyDescriptor::isDynamic)
-                .collect(Collectors.toList());
-
+                .toList();
 
         final RetrievalConfig retrievalConfig = configsBuilder.retrievalConfig()
                 .retrievalSpecificConfig(new PollingConfig(streamName, kinesisClient));
@@ -688,11 +714,15 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     private ShardRecordProcessorFactory prepareRecordProcessorFactory(final ProcessContext context, final ProcessSessionFactory sessionFactory) {
         return () -> {
             if (isRecordReaderSet && isRecordWriterSet) {
+                final OutputStrategy outputStrategy = context.getProperty(OUTPUT_STRATEGY).asAllowableValue(OutputStrategy.class);
+                final RecordConverter recordConverter = OutputStrategy.USE_WRAPPER == outputStrategy
+                        ? new RecordConverterWrapper()
+                        : new RecordConverterIdentity();
                 return new KinesisRecordProcessorRecord(
                         sessionFactory, getLogger(), getStreamName(context), getEndpointPrefix(context),
                         getKinesisEndpoint(context).orElse(null), getCheckpointIntervalMillis(context),
                         getRetryWaitMillis(context), getNumRetries(context), getDateTimeFormatter(context),
-                        getReaderFactory(context), getWriterFactory(context)
+                        getReaderFactory(context), getWriterFactory(context), recordConverter
                 );
             } else {
                 return new KinesisRecordProcessorRaw(
@@ -841,5 +871,21 @@ public class ConsumeKinesisStream extends AbstractAwsAsyncProcessor<KinesisAsync
     @Override
     protected KinesisAsyncClientBuilder createClientBuilder(final ProcessContext context) {
         return KinesisAsyncClient.builder();
+    }
+
+    @Override
+    protected void customizeAsyncHttpClientBuilderConfiguration(
+            final ProcessContext context,
+            final NettyNioAsyncHttpClient.Builder builder,
+            final Class<? extends AwsClientBuilder> customizationTargetClass) {
+        if (KinesisAsyncClientBuilder.class.isAssignableFrom(customizationTargetClass)) {
+            builder
+                    .maxConcurrency(Runtime.getRuntime().availableProcessors())
+                    .http2Configuration(Http2Configuration.builder()
+                            .initialWindowSize(INITIAL_WINDOW_SIZE_BYTES)
+                            .healthCheckPingPeriod(HEALTH_CHECK_PING_PERIOD_MILLIS)
+                            .build())
+                    .protocol(PROTOCOL);
+        }
     }
 }
